--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Install Node.js dependencies
         run: |
+          apt install tree
+          tree
           npm cache clean --force
           npm install
 
