--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -27,7 +27,6 @@ jobs:
 
       - name: Install Node.js dependencies
         run: |
-          sudo apt-get install -y tree
           npm cache clean --force
           npm install
 
@@ -65,8 +64,7 @@ jobs:
           sed -i 's|ANDROID_KEY_STORE_PASSWORD|'${{ secrets.ANDROID_KEY_STORE_PASSWORD }}'|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_STORE_LOCATION|${{ github.workspace }}/android/build-release.keystore|g' fastlane/Fastfile
           keytool -genkey -storepass "${{ secrets.ANDROID_KEY_STORE_PASSWORD }}" -keypass "${{ secrets.ANDROID_KEY_PASSWORD }}" -alias ${{ secrets.ANDROID_KEY_ALIAS }} -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=${{ vars.KeytoolFirstName }} ${{ vars.KeytoolLastName }}, OU=${{ vars.KeytoolOrganizationUnit }}, O=${{ vars.KeytoolOrganization }}, L=${{ vars.KeytoolCityOrLocality }}, S=${{ vars.KeytoolStateOrProvience }}, C=${{ vars.KeytoolTwoLetterCountryCode}}" -keystore build-release.keystore
-          fastlane release
-          tree
+          fastlane release --verbose
           
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
