ci: Fix Xcode command line tools command

--- a/.github/workflows/release-ios.yml
+++ b/.github/workflows/release-ios.yml
@@ -43,4 +43,4 @@ jobs:
 
       - name: Install Xcode command line tools (macOS)
         run: |
-          xcode-select --install
+          Software Update
