--- a/.github/workflows/release-ios.yml
+++ b/.github/workflows/release-ios.yml
@@ -32,6 +32,7 @@ jobs:
           # npm cache files are stored in `~/.npm` on Linux/macOS
           path: |
             ~/.npm
+            ios
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
