--- a/.github/workflows/release-ios.yml
+++ b/.github/workflows/release-ios.yml
@@ -76,11 +76,19 @@ jobs:
           bundle update
           bundle install
 
-      # - name: Configurating Fastlane
-      #   run: |
-      #     export LC_ALL=en_US.UTF-8
-      #     export LANG=en_US.UTF-8
-      #     cp -R fastlane/ios-config ios
-      #     mv ios/ios-config ios/fastlane
-      #     cd ios
-      #     fastlane beta --verbose
+      - name: Configurating Fastlane
+        run: |
+          export LC_ALL=en_US.UTF-8
+          export LANG=en_US.UTF-8
+          cp -R fastlane/ios-config ios
+          mv ios/ios-config ios/fastlane
+          cd ios
+          fastlane match appstore
+          fastlane beta --verbose
+        env:
+          MATCH_GIT_URL: ${{ secrets.FASTLANE_MATCH_GIT_URL }}
+          MATCH_PASSWORD: ${{ secrets.IOS_MATCH_PASSWORD }}
+          MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.FASTLANE_SECRETS_GIT_PAT_TOKEN }}
+          ASC_KEY_ID: ${{ secrets.IOS_ASC_KEY_ID }}
+          ASC_ISSUER_ID: ${{ secrets.IOS_ASC_ISSUER_ID }}
+          ASC_KEY_P8: ${{ secrets.ASC_KEY_P8 }}
