--- a/.github/workflows/release-ios.yml
+++ b/.github/workflows/release-ios.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
+          save-always: true
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -90,3 +91,4 @@ jobs:
           ASC_KEY_ID: ${{ secrets.IOS_ASC_KEY_ID }}
           ASC_ISSUER_ID: ${{ secrets.IOS_ASC_ISSUER_ID }}
           ASC_KEY_P8: ${{ secrets.ASC_KEY_P8 }}
+          FASTLANE_PASSWORD: ${{ secrets.APPLE_DEVELOPER_PORTAL_PASSWORD }}
