--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -92,6 +92,7 @@ jobs:
           sed -i 's|FASTLANE_SUPPLY_JSON_KEY_PRIVATE_ID|'${{ secrets.FASTLANE_SUPPLY_JSON_KEY_PRIVATE_ID }}'|g' fastlane/json-key.json
           echo replacing FASTLANE_SUPPLY_JSON_KEY_PRIVATE_KEY
           sed -i 's|FASTLANE_SUPPLY_JSON_KEY_PRIVATE_KEY|"${{ secrets.FASTLANE_SUPPLY_JSON_KEY_PRIVATE_KEY }}"|g' fastlane/json-key.json
+          sed -i 's|RUNNER_WORKSPACE|${{ github.workspace }}|g' fastlane/Appfile
           fastlane deploy --verbose
           
           
