--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -84,19 +84,10 @@ jobs:
       - name: Deploying to Google Play
         run: |
           cd android
-          echo replacing FASTLANE_SUPPLY_JSON_KEY_CLIENT_ID
-          sed -i 's|FASTLANE_SUPPLY_JSON_KEY_CLIENT_ID|'${{ vars.FASTLANE_SUPPLY_JSON_KEY_CLIENT_ID }}'|g' fastlane/json-key.json
-          echo replacing FASTLANE_SUPPLY_JSON_KEY_CLIENT_EMAIL
-          sed -i 's|FASTLANE_SUPPLY_JSON_KEY_CLIENT_EMAIL|'${{ vars.FASTLANE_SUPPLY_JSON_KEY_CLIENT_EMAIL }}'|g' fastlane/json-key.json
-          echo replacing FASTLANE_SUPPLY_JSON_KEY_PRIVATE_ID
-          sed -i 's|FASTLANE_SUPPLY_JSON_KEY_PRIVATE_ID|'${{ secrets.FASTLANE_SUPPLY_JSON_KEY_PRIVATE_ID }}'|g' fastlane/json-key.json
-          echo replacing FASTLANE_SUPPLY_JSON_KEY_PRIVATE_KEY
-          sed -i 's|FASTLANE_SUPPLY_JSON_KEY_PRIVATE_KEY|"${{ secrets.FASTLANE_SUPPLY_JSON_KEY_PRIVATE_KEY }}"|g' fastlane/json-key.json
+          echo ${{ secrets.FASTLANE_SUPPLY_JSON_KEY_BASE64 }} >> fastlane/json-key.json-base64
+          cat fastlane/json-key.json-base64 | base64 --decode > fastlane/json-key.json
           sed -i 's|RUNNER_WORKSPACE|${{ github.workspace }}|g' fastlane/Appfile
-          cd fastlane
-          ls -al
-          pwd
-          cat json-key.json
+          ls -al fastlane
           fastlane deploy --verbose
           
           
