fix: Fixing sed command 9

--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -91,6 +91,7 @@ jobs:
 
       - name: Building Bundle release (.AAB)
         run: |
+          cd android
           fastlane release --verbose
 
       - name: Configuring Google Play Credentials
