--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -75,17 +75,16 @@ jobs:
           mv android/android-config android/fastlane
           cd android
           sed -i 's|ANDROID_KEY_ALIAS|'${{ secrets.ANDROID_KEY_ALIAS }}'|g' fastlane/Fastfile
-          sed -i 's|ANDROID_KEY_PASSWORD|"${{ secrets.ANDROID_KEY_PASSWORD }}"|g' fastlane/Fastfile
-          sed -i 's|ANDROID_KEY_STORE_PASSWORD|"${{ secrets.ANDROID_KEY_STORE_PASSWORD }}"|g' fastlane/Fastfile
+          sed -i 's|ANDROID_KEY_PASSWORD|"abcdef#$123456"|g' fastlane/Fastfile
+          sed -i 's|ANDROID_KEY_STORE_PASSWORD|"abcdef#$123456"|g' fastlane/Fastfile
           sed -i 's|ANDROID_KEY_STORE_LOCATION|${{ github.workspace }}/android/build-release.keystore|g' fastlane/Fastfile
+          cat fastlane/Fastfile
 
       - name: Extracting Android Key for Signing the App    
         run: |
           cd android
           echo ${{ secrets.ANDROID_KEY_STORE_BASE64 }} >> build-release.keystore-base64
           cat build-release.keystore-base64 | base64 --decode > build-release.keystore
-          cat build-release.keystore-base64
-          cat build-release.keystore
 
       # - name: Generate Android Key for Signing the App    
       #   run: |
